<resources>
    <string name="app_name">Photo Assistant</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_gallery">Gallery</string>
    <string name="btn_down_text">DOWN</string>
    <string name="btn_up_text">UP</string>
    <string name="spinner_label_prompt">Select one or more label</string>
    <string name="spinner_sort_type_prompt">Select sorting type</string>
    <string name="btn_labeling">Labeling</string>
    <string name="title_collage">Collage</string>
    <string name="filters">FILTERS</string>
    <string name="background_color">background color</string>
    <string name="save_to_gallery">Save to gallery</string>
    <string name="select_label">Select label</string>
    <string name="select_sort_type">Select sort type</string>
    <string name="logo_title_text">Photo Assistant</string>
    <string name="peek_text">Visual Type</string>
    <string name="title_action_mode">Selected :</string>
    <string name="tag_uri_key" translatable="false">TAG_URI_KEY</string>
    <string name="tag_label_key" translatable="false">TAG_URI_KEY</string>
    <string name="title_magic_gallery">Gallery</string>
    <string name="title_image_fragment">Image</string>
    <string name="peek_text_collage">Special</string>
    <string-array name="types_sort_name">
        <item>Year month day</item>
        <item>Year month</item>
        <item>Year</item>
        <item>Month</item>
        <item>Day of month</item>
        <item>Day of week</item>
    </string-array>
</resources>
