<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    tools:context=".gallery.ui.RecyclerViewCategoriesFragment">

    <Button
        android:id="@+id/btn_do_index"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:padding="0dp"
        android:text="@string/btn_labeling"
        app:layout_constraintBottom_toTopOf="@id/spinner_sort_type"
        app:layout_constraintLeft_toRightOf="@id/spinner_labels"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.thomashaertel.widget.MultiSpinner
        android:id="@+id/spinner_labels"
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:prompt="@string/spinner_label_prompt"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toTopOf="@id/spinner_sort_type"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_do_index"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_sort_type"
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:prompt="@string/spinner_sort_type_prompt"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toTopOf="@id/recycler_view_category"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_do_index" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_category"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_sort_type" />

</androidx.constraintlayout.widget.ConstraintLayout>